--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,16 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <span>Tours</span>
+    <button mat-flat-button routerLink="users" class="marginLeft">Users</button>
     <span class="example-spacer"></span>
-    <a routerLink="/login">Login</a>
-    <a routerLink="/register">Register</a>
+    <button mat-flat-button routerLink="/" class="marginLeft">Add User</button>
+    <mat-form-field class="marginLeft" name=loginRegisterDropdown>
+      <mat-select placeholder="Login" (selectionChange)="navigateTo($event.value)">
+        <mat-option *ngFor="let entry of entries" [value]="entry.link">
+          {{entry.name}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
