add User component created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <span>Tours</span>
     <button mat-flat-button routerLink="users" class="marginLeft">Users</button>
     <span class="example-spacer"></span>
-    <button mat-flat-button routerLink="/" class="marginLeft">Add User</button>
+    <button mat-flat-button routerLink="add-user" class="marginLeft">Add User</button>
     <mat-form-field class="marginLeft" name=loginRegisterDropdown>
       <mat-select placeholder="Login" (selectionChange)="navigateTo($event.value)">
         <mat-option *ngFor="let entry of entries" [value]="entry.link">
