add User component created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <span class="example-spacer"></span>
     <button mat-flat-button routerLink="add-user" class="marginLeft">Add User</button>
     <mat-form-field class="marginLeft" name=loginRegisterDropdown>
-      <mat-select placeholder="Login" (selectionChange)="navigateTo($event.value)">
+      <mat-select placeholder="" (selectionChange)="navigateTo($event.value)">
         <mat-option *ngFor="let entry of entries" [value]="entry.link">
           {{entry.name}}
         </mat-option>
