--- a/src/app/components/add-user/add-user.component.html
+++ b/src/app/components/add-user/add-user.component.html
@@ -28,7 +28,7 @@
 
     </mat-form-field> -->
 
-    <button mat-flat-button color="primary" [disabled]="addUserForm.invalid" type="button" (click)="postUser()">Add
+    <button mat-flat-button color="warn" [disabled]="addUserForm.invalid" type="button" (click)="postUser()">Add
       User</button>
   </div>
 </form>
