--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,15 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="warn">
   <mat-toolbar-row>
-    <span>Tours</span>
-    <button mat-flat-button routerLink="users" class="marginLeft">Users</button>
+    <button mat-mini-fab color="basic" routerLink="users" aria-label="Example icon button with a home icon">
+      <mat-icon>home</mat-icon>
+    </button>
+    <span class="marginLeft">Tours</span>
     <span class="example-spacer"></span>
-    <button mat-flat-button routerLink="add-user" class="marginLeft">Add User</button>
-    <mat-form-field class="marginLeft" name=loginRegisterDropdown>
-      <mat-select placeholder="" (selectionChange)="navigateTo($event.value)">
-        <mat-option *ngFor="let entry of entries" [value]="entry.link">
-          {{entry.name}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+    <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item routerLink="login">Login</button>
+      <button mat-menu-item routerLink="register">Register </button>
+    </mat-menu>
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
