--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,13 +1,22 @@
-<h1>All Users</h1>
+<h1 class="heading-primary">All Users</h1>
 
-<mat-form-field class="marginLeft">
-  <mat-label>Filter by UserName</mat-label>
-  <input matInput type="text" [(ngModel)]="filterValue" (input)="findByName(filterValue)" placeholder="Search by name">
-</mat-form-field>
+
+
+<div class="container">
+  <mat-form-field class="marginLeft">
+    <mat-label>Filter by UserName</mat-label>
+    <input matInput type="text" [(ngModel)]="filterValue" (input)="findByName(filterValue)"
+      placeholder="Search by name">
+  </mat-form-field>
+
+  <button class="user-button" color="warn" mat-flat-button routerLink="add-user">Create a
+    User</button>
+</div>
+
 
 <div *ngIf="dataSource">
-  <mat-table [dataSource]="dataSource.data">
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-table class="table" [dataSource]="dataSource.data">
+    <mat-header-row class="table-header" *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let myRowData; columns: displayedColumns"></mat-row>
 
     <ng-container matColumnDef="id">
@@ -38,33 +47,17 @@
     </ng-container>
 
     <ng-container matColumnDef="action">
-      <mat-header-cell *matHeaderCellDef> Edit </mat-header-cell>
-      <mat-cell *matCellDef="let row"> <button routerLink="edit-user" mat-flat-button class="marginLeft"
-          color="primary">Edit User</button>
+      <mat-header-cell *matHeaderCellDef class="action-header"> Action </mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <button class="edit-button" routerLink="edit-user" mat-stroked-button color="warn">Edit</button>
+
+        <!-- Delete Button -->
+        <button class="button-margin-left" (click)="removeUser(row)" mat-mini-fab color="warn"
+          aria-label="Example icon button with a delete icon">
+          <mat-icon>delete</mat-icon>
+        </button>
       </mat-cell>
     </ng-container>
-
-    <ng-container matColumnDef="edit">
-      <mat-header-cell *matHeaderCellDef> Edit </mat-header-cell>
-      <mat-cell *matCellDef="let row"> <button routerLink="edit-user" mat-flat-button class="marginLeft"
-          color="primary">Edit User</button>
-      </mat-cell>
-    </ng-container>
-
-
-    <ng-container matColumnDef="delete">
-      <mat-header-cell *matHeaderCellDef> Delete </mat-header-cell>
-      <mat-cell *matCellDef="let row"> <button (click)="removeUser(row)" mat-flat-button class="marginLeft"
-          color="primary">Delete </button>
-      </mat-cell>
-    </ng-container>
-
-
-
-
-
-
-
   </mat-table>
 
 
@@ -73,9 +66,3 @@
     aria-label="Select page" class="paginator">
   </mat-paginator>
 </div>
-
-
-
-<!-- Syntax To delete a user
-
- -->
