--- a/src/app/components/add-user/add-user.component.css
+++ b/src/app/components/add-user/add-user.component.css
@@ -1,4 +1,6 @@
-h1 {
+.heading-primary {
+  margin: 20px 0;
+  font-size: 25px;
   text-align: center;
 }
 
@@ -10,5 +12,5 @@ h1 {
 }
 
 .container > * {
-  width: 40%;
+  width: 25%;
 }
