--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="warn">
   <mat-toolbar-row>
     <button mat-mini-fab color="basic" routerLink="users" aria-label="Example icon button with a home icon">
-      <mat-icon>home</mat-icon>
+      <mat-icon class="home-icon">home</mat-icon>
     </button>
     <span class="marginLeft">Tours</span>
     <span class="example-spacer"></span>
