--- a/src/app/components/edit-user/edit-user.component.html
+++ b/src/app/components/edit-user/edit-user.component.html
@@ -1,1 +1,27 @@
-<p>edit-user works!</p>
+<h1 class="heading-primary">Edit User</h1>
+
+<form [formGroup]="editUserForm" (ngSubmit)="onSubmit()">
+  <div class="container">
+    <mat-form-field>
+      <input matInput placeholder="Name" formControlName="name">
+
+    </mat-form-field>
+
+    <mat-form-field>
+      <input matInput placeholder="Email" formControlName="email">
+
+    </mat-form-field>
+
+    <mat-form-field>
+      <input type="password" matInput placeholder="Password" formControlName="password">
+
+    </mat-form-field>
+
+    <mat-form-field>
+      <input matInput placeholder="ImageUrl" formControlName="imageUrl">
+
+    </mat-form-field>
+    <button mat-flat-button color="warn" type="submit">Update
+      User</button>
+  </div>
+</form>
