--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
   <mat-form-field class="marginLeft">
-    <mat-label>Filter by UserName</mat-label>
+    <mat-label>Search by Name</mat-label>
     <input matInput type="text" [(ngModel)]="filterValue" (input)="findByName(filterValue)"
       placeholder="Search by name">
   </mat-form-field>
@@ -57,8 +57,10 @@
     </ng-container>
   </mat-table>
 
+
   <mat-paginator [length]="dataSource.pagination.totalCount" [pageSize]="dataSource.pagination.pageSize"
     [pageSizeOptions]="[10]" (page)="pageEvent = $event;onPaginateChange($event)" showFirstLastButtons
     aria-label="Select page" class="paginator">
   </mat-paginator>
+
 </div>
