--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,16 +1,16 @@
 <h1 class="heading-primary">Login Page</h1>
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+<form color="warn" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
   <div class="container">
-    <mat-form-field>
-      <input matInput placeholder="Email" formControlName="email">
+    <mat-form-field color="warn">
+      <input color="warn" matInput placeholder="Email" formControlName="email">
       <mat-hint *ngIf="loginForm.controls['email'].errors">Email is required</mat-hint>
     </mat-form-field>
 
-    <mat-form-field>
-      <input matInput placeholder="Password" type="password" formControlName="password">
+    <mat-form-field color="warn">
+      <input color="warn" matInput placeholder="Password" type="password" formControlName="password">
       <mat-hint *ngIf="loginForm.controls['password'].errors">Password is required</mat-hint>
     </mat-form-field>
 
-    <button mat-flat-button color="primary" [disabled]='!loginForm.valid' type="submit">Login</button>
+    <button mat-flat-button color="warn" [disabled]='!loginForm.valid' type="submit">Login</button>
   </div>
 </form>
