--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -4,27 +4,27 @@
 
 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
   <div class="container">
-    <mat-form-field>
-      <input matInput placeholder="Name" formControlName="name">
+    <mat-form-field color="warn">
+      <input color="warn" matInput placeholder="Name" formControlName="name">
       <mat-hint *ngIf="registerForm.get('name')?.errors">Name is required!!</mat-hint>
     </mat-form-field>
 
-    <mat-form-field>
-      <input matInput placeholder="Email" formControlName="email">
+    <mat-form-field color="warn">
+      <input color="warn" matInput placeholder="Email" formControlName="email">
       <mat-hint *ngIf="registerForm.get('email')?.errors">Email is required!!</mat-hint>
     </mat-form-field>
 
-    <mat-form-field>
-      <input type="password" matInput placeholder="Password" formControlName="password">
+    <mat-form-field color="warn">
+      <input color="warn" type="password" matInput placeholder="Password" formControlName="password">
       <mat-hint *ngIf="registerForm.get('password')?.errors">Password is required or password must be min 9
         charachters!!</mat-hint>
     </mat-form-field>
 
-    <mat-form-field>
-      <input matInput placeholder="ImageUrl" formControlName="imageUrl">
+    <mat-form-field color="warn">
+      <input color="warn" matInput placeholder="ImageUrl" formControlName="imageUrl">
       <mat-hint *ngIf="registerForm.get('imageUrl')?.errors">ImageUrl is required!!</mat-hint>
     </mat-form-field>
 
-    <button mat-flat-button color="primary" [disabled]="registerForm.invalid" type="submit">Register</button>
+    <button mat-flat-button color="warn" [disabled]="registerForm.invalid" type="submit">Register</button>
   </div>
 </form>
