--- a/src/app/auth/components/login/login.component.css
+++ b/src/app/auth/components/login/login.component.css
@@ -1,5 +1,5 @@
 .heading-primary {
-  margin: 20px 0;
+  margin: 20px 0 0 0;
   font-size: 25px;
   text-align: center;
 }
@@ -9,8 +9,33 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 60px;
 }
 
 .container > * {
-  width: 18%;
+  width: 20%;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 15px 0;
+}
+
+.form-container > * {
+  width: 75%;
+}
+
+.errors-texts {
+  margin-top: 5px;
+}
+
+.login-button {
+  margin-top: 15px;
+}
+
+.form-filed {
+  margin-top: 5px;
 }
