--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,30 +1,33 @@
-<h1 class="heading-primary">Register Page</h1>
+<div class="container">
+  <mat-card class="mat-card">
+    <h1 class="heading-primary">Register Page</h1>
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+      <div class="form-container">
+        <mat-form-field color="warn" class="form-filed">
+          <input color="warn" matInput placeholder="Name" formControlName="name">
+          <mat-hint class="errors-texts" *ngIf="registerForm.get('name')?.errors">Name is required!!</mat-hint>
+        </mat-form-field>
 
+        <mat-form-field color="warn" class="form-filed">
+          <input color="warn" matInput placeholder="Email" formControlName="email">
+          <mat-hint class="errors-texts" *ngIf="registerForm.get('email')?.errors">Email is required!!</mat-hint>
+        </mat-form-field>
 
+        <mat-form-field color="warn" class="form-filed">
+          <input color="warn" type="password" matInput placeholder="Password" formControlName="password">
+          <mat-hint class="errors-texts" *ngIf="registerForm.get('password')?.errors">Password is required or password
+            must be min 9
+            charachters!!</mat-hint>
+        </mat-form-field>
 
-<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-  <div class="container">
-    <mat-form-field color="warn">
-      <input color="warn" matInput placeholder="Name" formControlName="name">
-      <mat-hint *ngIf="registerForm.get('name')?.errors">Name is required!!</mat-hint>
-    </mat-form-field>
+        <mat-form-field color="warn" class="form-filed">
+          <input color="warn" matInput placeholder="ImageUrl" formControlName="imageUrl">
+          <mat-hint class="errors-texts" *ngIf="registerForm.get('imageUrl')?.errors">ImageUrl is required!!</mat-hint>
+        </mat-form-field>
 
-    <mat-form-field color="warn">
-      <input color="warn" matInput placeholder="Email" formControlName="email">
-      <mat-hint *ngIf="registerForm.get('email')?.errors">Email is required!!</mat-hint>
-    </mat-form-field>
-
-    <mat-form-field color="warn">
-      <input color="warn" type="password" matInput placeholder="Password" formControlName="password">
-      <mat-hint *ngIf="registerForm.get('password')?.errors">Password is required or password must be min 9
-        charachters!!</mat-hint>
-    </mat-form-field>
-
-    <mat-form-field color="warn">
-      <input color="warn" matInput placeholder="ImageUrl" formControlName="imageUrl">
-      <mat-hint *ngIf="registerForm.get('imageUrl')?.errors">ImageUrl is required!!</mat-hint>
-    </mat-form-field>
-
-    <button mat-flat-button color="warn" [disabled]="registerForm.invalid" type="submit">Register</button>
-  </div>
-</form>
+        <button class="register-button" mat-flat-button color="warn" [disabled]="registerForm.invalid"
+          type="submit">Register</button>
+      </div>
+    </form>
+  </mat-card>
+</div>
