--- a/src/app/components/edit-dialog/edit-dialog.component.css
+++ b/src/app/components/edit-dialog/edit-dialog.component.css
@@ -1,16 +1,20 @@
 .heading-primary {
-  margin: 20px 0;
+  margin: 25px 0 0 0;
   font-size: 25px;
   text-align: center;
 }
 
-.container {
+.form-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.container > * {
-  width: 25%;
+.form-container > * {
+  width: 100%;
+}
+
+.editUser-button {
+  margin-top: 20px;
 }
