delete user confirmation added

--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -52,7 +52,7 @@
         <button class="edit-button" mat-stroked-button color="warn" (click)="openDialog(row)">Edit</button>
 
         <!-- Delete Button -->
-        <button class="button-margin-left" (click)="removeUser(row)" mat-mini-fab color="warn"
+        <button class="button-margin-left" (click)="openDialog2(row)" mat-mini-fab color="warn"
           aria-label="Example icon button with a delete icon">
           <mat-icon>delete</mat-icon>
         </button>
