add user changed from a component to a dialog

--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -7,7 +7,10 @@
       placeholder="Search by name">
   </mat-form-field>
 
-  <button class="user-button" color="warn" mat-flat-button routerLink="add-user">Create a
+  <!-- <button class="user-button" color="warn" mat-flat-button routerLink="add-user">Create a
+    User</button> -->
+
+  <button class="user-button" color="warn" mat-flat-button (click)="openDialog3()">Create a
     User</button>
 </div>
 
