--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <span class="example-spacer"></span>
     <button mat-button [matMenuTriggerFor]="menu">Menu</button>
     <mat-menu #menu="matMenu" class="menu">
-
+      <!-- <button mat-menu-item (click)="show()">1</button> -->
       <button mat-menu-item routerLink="login">Login</button>
       <button mat-menu-item routerLink="register">Register </button>
     </mat-menu>
