--- a/src/app/components/add-user-dialog/add-user-dialog.component.css
+++ b/src/app/components/add-user-dialog/add-user-dialog.component.css
@@ -7,8 +7,22 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 300px;
+  height: auto;
 }
 
 .form-container > * {
   width: 100%;
+}
+
+.addUser-button {
+  margin-top: 20px;
+}
+
+.errors-texts {
+  margin: 5px 0;
+}
+
+.form-filed {
+  margin: 8px 0;
 }
