--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -5,12 +5,12 @@
       <div class="form-container">
         <mat-form-field color="warn" class="form-filed">
           <input color="warn" matInput placeholder="Email" formControlName="email">
-          <mat-hint class="errors-text" *ngIf="loginForm.controls['email'].errors">Email is required</mat-hint>
+          <mat-hint class="errors-text" *ngIf="emailFormat">Email is required</mat-hint>
         </mat-form-field>
 
         <mat-form-field color="warn" class="form-filed">
           <input color="warn" matInput placeholder="Password" type="password" formControlName="password">
-          <mat-hint class="errors-text" *ngIf="loginForm.controls['password'].errors">Password is required</mat-hint>
+          <mat-hint class="errors-text" *ngIf="passwordInvalid">Password is required</mat-hint>
         </mat-form-field>
 
         <button class="login-button" mat-flat-button color="warn" [disabled]='!loginForm.valid'
