--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -5,24 +5,24 @@
       <div class="form-container">
         <mat-form-field color="warn" class="form-filed">
           <input color="warn" matInput placeholder="Name" formControlName="name">
-          <mat-hint class="errors-texts" *ngIf="registerForm.get('name')?.errors">Name is required!!</mat-hint>
+          <mat-hint class="errors-texts" *ngIf="nameInvalid">Name is required!!</mat-hint>
         </mat-form-field>
 
         <mat-form-field color="warn" class="form-filed">
           <input color="warn" matInput placeholder="Email" formControlName="email">
-          <mat-hint class="errors-texts" *ngIf="registerForm.get('email')?.errors">Email is required!!</mat-hint>
+          <mat-hint *ngIf="emailFormat">Email is required!!!
+          </mat-hint>
         </mat-form-field>
 
-        <mat-form-field color="warn" class="form-filed">
+        <mat-form-field color="warn">
           <input color="warn" type="password" matInput placeholder="Password" formControlName="password">
-          <mat-hint class="errors-texts" *ngIf="registerForm.get('password')?.errors">Password is required or password
-            must be min 9
-            charachters!!</mat-hint>
+          <mat-hint class="errors-texts" *ngIf="passwordInvalid">Password is required!!!
+          </mat-hint>
         </mat-form-field>
 
         <mat-form-field color="warn" class="form-filed">
           <input color="warn" matInput placeholder="ImageUrl" formControlName="imageUrl">
-          <mat-hint class="errors-texts" *ngIf="registerForm.get('imageUrl')?.errors">ImageUrl is required!!</mat-hint>
+          <mat-hint class="errors-texts" *ngIf="imageInvalid">Image is required!!</mat-hint>
         </mat-form-field>
 
         <button class="register-button" mat-flat-button color="warn" [disabled]="registerForm.invalid"
