--- a/src/app/components/add-user-dialog/add-user-dialog.component.html
+++ b/src/app/components/add-user-dialog/add-user-dialog.component.html
@@ -4,24 +4,22 @@
   <div class="form-container">
     <mat-form-field color="warn" class="form-filed">
       <input color="warn" matInput placeholder="Name" formControlName="name">
-      <mat-hint class="errors-texts" *ngIf="addUserForm.get('name')?.errors">Name is required!!</mat-hint>
+      <mat-hint class="errors-texts" *ngIf="nameInvalid">Name is required!!</mat-hint>
     </mat-form-field>
 
     <mat-form-field color="warn" class="form-filed">
       <input color="warn" matInput placeholder="Email" formControlName="email">
-      <mat-hint class="errors-texts" *ngIf="addUserForm.get('email')?.errors">Email is required!!</mat-hint>
+      <mat-hint class="errors-texts" *ngIf="emailFormat">Email is required!!</mat-hint>
     </mat-form-field>
 
     <mat-form-field color="warn" class="form-filed">
       <input color="warn" type="password" matInput placeholder="Password" formControlName="password">
-      <mat-hint *ngIf="addUserForm.get('password')?.errors">Password is required or password
-        must be min 9
-        charachters!!</mat-hint>
+      <mat-hint *ngIf="passwordInvalid">Password is required!!</mat-hint>
     </mat-form-field>
 
     <mat-form-field color="warn" class="form-filed">
       <input color="warn" matInput placeholder="ImageUrl" formControlName="imageUrl">
-      <mat-hint class="errors-texts" *ngIf="addUserForm.get('imageUrl')?.errors">ImageUrl is required!!</mat-hint>
+      <mat-hint class="errors-texts" *ngIf="imageInvalid">ImageUrl is required!!</mat-hint>
     </mat-form-field>
     <button class="addUser-button" mat-flat-button color="warn" [disabled]="addUserForm.invalid" type="submit">Add
       User</button>
