--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -5,29 +5,45 @@
       <div class="form-container">
         <mat-form-field color="warn" class="form-filed">
           <input color="warn" matInput placeholder="Name" formControlName="name">
-          <mat-hint class="errors-texts" *ngIf="nameInvalid">Name is required!!</mat-hint>
+          <mat-hint class="errors-texts" *ngIf="getInvalidInput('name', 'required')">Name is required!!</mat-hint>
         </mat-form-field>
 
         <mat-form-field color="warn" class="form-filed">
           <input color="warn" matInput placeholder="Email" formControlName="email">
-          <mat-hint *ngIf="emailFormat">Email is required!!!
+          <mat-hint class="errors-texts" *ngIf="getInvalidInput('email', 'required')">Email is required!!!
+          </mat-hint>
+          <mat-hint class="errors-texts" *ngIf="getInvalidInput('email', 'email')">Email is not valid!!!
           </mat-hint>
         </mat-form-field>
 
-        <mat-form-field color="warn">
+        <mat-form-field color="warn" class="form-filed">
           <input color="warn" type="password" matInput placeholder="Password" formControlName="password">
-          <mat-hint class="errors-texts" *ngIf="passwordInvalid">Password is required!!!
+          <mat-hint class="errors-texts" *ngIf="getInvalidInput('password', 'required')">Password is required!!!
+          </mat-hint>
+          <mat-hint class="errors-texts" *ngIf="getInvalidInput('password', 'minlength')">Password mus be at least 9
+            charachters!!!
+          </mat-hint>
+        </mat-form-field>
+
+        <mat-form-field color="warn" class="form-filed">
+          <input color="warn" type="password" matInput placeholder="Confirm Password" formControlName="passwordConfirm">
+          <mat-hint class="errors-texts" *ngIf="getInvalidInput('passwordConfirm', 'required')">Password Confirmation is
+            required!!!
+          </mat-hint>
+          <mat-hint class="errors-texts" *ngIf="registerForm.errors?.['passwordsNotMatching']">Password not
+            matching!!!
           </mat-hint>
         </mat-form-field>
 
         <mat-form-field color="warn" class="form-filed">
           <input color="warn" matInput placeholder="ImageUrl" formControlName="imageUrl">
-          <mat-hint class="errors-texts" *ngIf="imageInvalid">Image is required!!</mat-hint>
+          <mat-hint class="errors-texts" *ngIf="getInvalidInput('imageUrl', 'required')">Image is required!!</mat-hint>
         </mat-form-field>
 
-        <button class="register-button" mat-flat-button color="warn" [disabled]="registerForm.invalid"
+        <button class="register-button" mat-flat-button color="warn" [disabled]="registerForm.invalid || isSubmited"
           type="submit">Register</button>
       </div>
     </form>
+
   </mat-card>
 </div>
