--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-.ecample-icon {
+.example-icon {
   padding: 0 14px;
 }
 
@@ -6,7 +6,7 @@
   flex: 1 1 auto;
 }
 
-.marginLeft {
+.margin-left {
   margin-left: 20px;
 }
 
