--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="warn">
   <mat-toolbar-row>
-    <button *ngIf="isAuth()===true" mat-mini-fab color="basic" routerLink="users"
+    <button *ngIf="isAuth()" mat-mini-fab color="basic" routerLink="users"
       aria-label="Example icon button with a home icon">
       <mat-icon class="home-icon">home</mat-icon>
     </button>
