--- a/src/app/users-dashboard/users/users.component.html
+++ b/src/app/users-dashboard/users/users.component.html
@@ -1,7 +1,7 @@
 <h1 class="heading-primary">All Users</h1>
 
 <div class="container">
-  <mat-form-field color="warn" class="marginLeft">
+  <mat-form-field color="warn" class="margin-left">
     <mat-label>Search by Name</mat-label>
     <input color="warn" matInput type="text" [(ngModel)]="filterValue" (input)="findByName(filterValue)"
       placeholder="Search by name">
@@ -16,7 +16,7 @@
 
 <div *ngIf="dataSource">
   <mat-table class="table" [dataSource]="dataSource.data">
-    <mat-header-row class="table-header" *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let myRowData; columns: displayedColumns"></mat-row>
 
     <ng-container matColumnDef="id">
