--- a/src/app/users-dashboard/add-user-dialog/add-user-dialog.component.html
+++ b/src/app/users-dashboard/add-user-dialog/add-user-dialog.component.html
@@ -4,12 +4,12 @@
   <div class="form-container">
     <mat-form-field color="warn" class="form-filed">
       <input color="warn" matInput placeholder="Name" formControlName="name">
-      <mat-hint class="errors-texts" *ngIf="getInvalidInput('name', 'required')">Name is required!!</mat-hint>
+      <mat-hint class="errors-texts" *ngIf="getInvalidInput('name')">Name is required!!</mat-hint>
     </mat-form-field>
 
     <mat-form-field color="warn" class="form-filed">
       <input color="warn" matInput placeholder="Email" formControlName="email">
-      <mat-hint class="errors-texts" *ngIf="getInvalidInput('email', 'required')">Email is required!!!
+      <mat-hint class="errors-texts" *ngIf="getInvalidInput('email')">Email is required!!!
       </mat-hint>
       <mat-hint class="errors-texts" *ngIf="getInvalidInput('email', 'email')">Email is not valid!!!
       </mat-hint>
@@ -17,7 +17,7 @@
 
     <mat-form-field color="warn" class="form-filed">
       <input color="warn" type="password" matInput placeholder="Password" formControlName="password">
-      <mat-hint class="errors-texts" *ngIf="getInvalidInput('password', 'required')">Password is required!!!
+      <mat-hint class="errors-texts" *ngIf="getInvalidInput('password')">Password is required!!!
       </mat-hint>
       <mat-hint class="errors-texts" *ngIf="getInvalidInput('password', 'minlength')">Password mus be at least 9
         charachters!!!
@@ -26,7 +26,7 @@
 
     <mat-form-field color="warn" class="form-filed">
       <input color="warn" type="password" matInput placeholder="Confirm Password" formControlName="passwordConfirm">
-      <mat-hint class="errors-texts" *ngIf="getInvalidInput('passwordConfirm', 'required')">Password Confirmation is
+      <mat-hint class="errors-texts" *ngIf="getInvalidInput('passwordConfirm')">Password Confirmation is
         required!!!
       </mat-hint>
       <mat-hint class="errors-texts" *ngIf="addUserForm.errors?.['passwordsNotMatching']">Password not
@@ -36,7 +36,7 @@
 
     <mat-form-field color="warn" class="form-filed">
       <input color="warn" matInput placeholder="ImageUrl" formControlName="imageUrl">
-      <mat-hint class="errors-texts" *ngIf="getInvalidInput('imageUrl', 'required')">Image is required!!</mat-hint>
+      <mat-hint class="errors-texts" *ngIf="getInvalidInput('imageUrl')">Image is required!!</mat-hint>
     </mat-form-field>
     <button class="add-user-button" mat-flat-button color="warn" [disabled]="addUserForm.invalid || isSubmited"
       type="submit">Add
