--- a/src/app/pages/users/components/add-user-dialog/add-user-dialog.component.html
+++ b/src/app/pages/users/components/add-user-dialog/add-user-dialog.component.html
@@ -20,7 +20,7 @@
       <mat-hint class="errors-texts" *ngIf="getInvalidInput('password')">Password is required!!!
       </mat-hint>
       <mat-hint class="errors-texts" *ngIf="getInvalidInput('password', 'minlength')">Password mus be at least 9
-        charachters!!!
+        characters!!!
       </mat-hint>
     </mat-form-field>
 
