--- a/src/app/pages/users/components/delete-dialog/delete-dialog.component.html
+++ b/src/app/pages/users/components/delete-dialog/delete-dialog.component.html
@@ -4,5 +4,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="center">
   <button color="warn" mat-flat-button (click)="removeUser()">Delete</button>
-  <button mat-flat-button (click)="closeDialog()" cdkFocusInitial>Cancel</button>
+  <button mat-flat-button (click)="closeDialog()">Cancel</button>
 </mat-dialog-actions>
